FEAT: ProjectUser 생성 함수 추가